--- a/src/main/resources/templates/designation_details.html
+++ b/src/main/resources/templates/designation_details.html
@@ -20,8 +20,8 @@
                 <div class="card-body">
                     <h5 class="card-title" th:text="${title}"></h5>
                     <form action="#"
-                          th:action="@{/edit/{id}(id=${designation.id})}"
-                          th:object="${designation}"
+                          th:action="@{/edit}"
+                          th:object="${designationDto}"
                           method="post">
                         <div class="row">
                             <div class="col-sm-10">
