Updated Maks tint color and necessary changes

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -23,7 +23,8 @@ body {
 }
 
 a {
-  color: #4154f1;
+  /*color: #4154f1;*/
+  color: #727a2f;
   text-decoration: none;
 }
 
@@ -80,7 +81,8 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 99999;
-  background: #4154f1;
+  /*background: #4154f1;*/
+  background: #727a2f;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -325,7 +327,8 @@ h6 {
 
 .accordion-flush .accordion-button:not(.collapsed) {
   box-shadow: none;
-  color: #4154f1;
+  /*color: #4154f1;*/
+  color: #727a2f;
 }
 
 .accordion-flush .accordion-body {
@@ -373,13 +376,15 @@ h6 {
 
 .nav-tabs-bordered .nav-link:hover,
 .nav-tabs-bordered .nav-link:focus {
-  color: #4154f1;
+  /*color: #4154f1;*/
+  color: #727a2f;
 }
 
 .nav-tabs-bordered .nav-link.active {
   background-color: #fff;
-  color: #4154f1;
-  border-bottom: 2px solid #4154f1;
+  /*color: #4154f1;*/
+  color: #727a2f;
+  border-bottom: 2px solid #727a2f;
 }
 
 /*--------------------------------------------------------------
@@ -715,7 +720,8 @@ h6 {
   align-items: center;
   font-size: 15px;
   font-weight: 600;
-  color: #4154f1;
+  /*color: #4154f1;*/
+  color: #727a2f;
   transition: 0.3;
   background: #f6f9ff;
   padding: 10px 15px;
@@ -725,7 +731,8 @@ h6 {
 .sidebar-nav .nav-link i {
   font-size: 16px;
   margin-right: 10px;
-  color: #4154f1;
+  /*color: #4154f1;*/
+  color: #727a2f;
 }
 
 .sidebar-nav .nav-link.collapsed {
@@ -738,12 +745,14 @@ h6 {
 }
 
 .sidebar-nav .nav-link:hover {
-  color: #4154f1;
+  /*color: #4154f1;*/
+  color: #727a2f;
   background: #f6f9ff;
 }
 
 .sidebar-nav .nav-link:hover i {
-  color: #4154f1;
+  /*color: #4154f1;*/
+  color: #727a2f;
 }
 
 .sidebar-nav .nav-link .bi-chevron-down {
@@ -773,7 +782,7 @@ h6 {
 }
 
 .sidebar-nav .nav-content a i {
-  font-size: 6px;
+  font-size: 16px;
   margin-right: 8px;
   line-height: 0;
   border-radius: 50%;
@@ -781,11 +790,13 @@ h6 {
 
 .sidebar-nav .nav-content a:hover,
 .sidebar-nav .nav-content a.active {
-  color: #4154f1;
+  /*color: #4154f1;*/
+  color: #727a2f;
 }
 
 .sidebar-nav .nav-content a.active i {
-  background-color: #4154f1;
+  /*background-color: #4154f1;*/
+  background-color: #727a2f;
 }
 
 /*--------------------------------------------------------------
@@ -808,7 +819,8 @@ h6 {
 
 .dashboard .filter .icon:hover,
 .dashboard .filter .icon:focus {
-  color: #4154f1;
+  /*color: #4154f1;*/
+  color: #727a2f;
 }
 
 .dashboard .filter .dropdown-header {
@@ -852,7 +864,8 @@ h6 {
 }
 
 .dashboard .sales-card .card-icon {
-  color: #4154f1;
+  /*color: #4154f1;*/
+  color: #727a2f;
   background: #f6f6fe;
 }
 
@@ -937,7 +950,8 @@ h6 {
 }
 
 .dashboard .news h4 a:hover {
-  color: #4154f1;
+  /*color: #4154f1;*/
+  color: #727a2f;
 }
 
 .dashboard .news p {
@@ -1085,7 +1099,8 @@ h6 {
 .faq .basic h6 {
   font-size: 18px;
   font-weight: 600;
-  color: #4154f1;
+  /*color: #4154f1;*/
+  color: #727a2f;
 }
 
 .faq .basic p {
@@ -1102,7 +1117,8 @@ h6 {
 .contact .info-box i {
   font-size: 38px;
   line-height: 0;
-  color: #4154f1;
+  /*color: #4154f1;*/
+  color: #727a2f;
 }
 
 .contact .info-box h3 {
@@ -1174,7 +1190,8 @@ h6 {
 
 .contact .php-email-form input:focus,
 .contact .php-email-form textarea:focus {
-  border-color: #4154f1;
+  /*border-color: #4154f1;*/
+  border-color: #727a2f;
 }
 
 .contact .php-email-form input {
@@ -1186,7 +1203,8 @@ h6 {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #4154f1;
+  /*background: #4154f1;*/
+  background: #727a2f;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1218,7 +1236,8 @@ h6 {
 .error-404 h1 {
   font-size: 180px;
   font-weight: 700;
-  color: #4154f1;
+  /*color: #4154f1;*/
+  color: #727a2f;
   margin-bottom: 0;
   line-height: 150px;
 }
