--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -25,18 +25,24 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link collapsed" data-bs-target="#user-nav" data-bs-toggle="collapse" href="#">
-                <i class="bi bi-menu-button-wide"></i><span>User</span><i class="bi bi-chevron-down ms-auto"></i>
+            <a class="nav-link collapsed"
+               data-bs-target="#user-nav"
+               data-bs-toggle="collapse"
+               href="#">
+                <i class="bi bi-menu-button-wide"></i>
+                <span>User</span>
+                <i class="bi bi-chevron-down ms-auto"></i>
             </a>
-            <ul id="user-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-                <li>
+            <ul id="user-nav" class="nav-content collapsed " data-bs-parent="#sidebar-nav">
+
+                <li class="nav-item">
                     <a th:href="@{/createUser}">
-                        <i class="bi bi-circle"></i><span>Create User</span>
+                        <i class="bi bi-person-plus sidebar-icon"></i><span>Create User</span>
                     </a>
                 </li>
-                <li>
+                <li class="nav-item">
                     <a th:href="@{/users}">
-                        <i class="bi bi-circle"></i><span>User List</span>
+                        <i class="bi bi-people sidebar-icon"></i><span>User List</span>
                     </a>
                 </li>
             </ul>
